# Langchain_and_Langgraph

./: .gitignore  README.md  main.py  pyproject.toml
.ragatouille/colbert/indexes/Miyazaki-123/: 0.metadata.json  0.residuals.pt  buckets.pt  collection.json  ivf.pid.pt  metadata.json  pid_docid_map.json  plan.json
RAG-fusion/: RAG_fusion.py  chunking.py  main.py
RAG-multi-query-retrieval/: main.py
RAG_query_decomposition/: main.py  pyproject.toml  scrape_data_from_web.py
ReAct_agent_langgraph/: main.py  nodes.py  pyproject.toml  react.py  readme.md  state.py
advanced_rag/adaptive_rag/: Dockerfile  main.py  pyproject.toml  readme.md
advanced_rag/adaptive_rag/graph/: graph.py  state.py
advanced_rag/adaptive_rag/graph/chains/: hallucination_grader.py  retrieval_grader.py  router.py
advanced_rag/adaptive_rag/graph/nodes/: __init__.py  hallucination.py  retrieve.py
advanced_rag/corrective_rag/: main.py  readme.md
advanced_rag/corrective_rag/graph/: graph.py
advanced_rag/self_rag/: readme.md
advanced_rag/self_rag/graph/: graph.py
advanced_rag/self_rag/graph/chains/: generation.py
advanced_rag/self_rag/graph/nodes/: generate.py  grade_documents.py  web_search.py
advanced_rag/self_rag_with_hall_ans_nodes/: ingestion.py  main.py  readme.md
advanced_rag/self_rag_with_hall_ans_nodes/graph/: constants.py  graph.py
advanced_rag/self_rag_with_hall_ans_nodes/graph/chains/: answer_grader.py
advanced_rag/self_rag_with_hall_ans_nodes/graph/nodes/: answers_question.py  generate.py
ai_agents/telco_customer_service_agent/: Dockerfile  langgraph.json  pyproject.toml  telco_agent_db.db  telco_agent_db.db-shm  telco_agent_db.db-wal
ai_agents/telco_customer_service_agent/graph/: constants.py  graph.py  state.py
ai_agents/telco_customer_service_agent/graph/chains/: categorize_chain.py  internet_react_agent_chain.py  iot_react_agent_chain.py  phone_react_agent_chain.py  sentiment_chain.py
ai_agents/telco_customer_service_agent/graph/nodes/: categorize_node.py  internet_act_node.py  internet_hitl_node.py  internet_reason_node.py  iot_act_node.py  iot_reason_node.py  phone_act_node.py  phone_hitl_node.py  phone_reason_node.py  sentiment_node.py  transfer_to_human.py
ai_agents/telco_customer_service_agent/graph/tools/: CRM_tool.py  phone_area_service_quality_tool.py  phone_billing_db_tool.py  phone_vectorstore_retriever_tool.py
basic-RAG/: .env  chunking.py  main.py  pyproject.toml  scrape_data_from_web.py
human_in_the_loop_memory/: main.py
indexing_techniques/colBERT_retrieval/: colBERT_retrieval.py  get_data.py  pyproject.toml  readme.md
indexing_techniques/multi_vector_indexing/: create_vectorstore.py  multi_vector_parent_document.py  multi_vector_summary.py  pyproject.toml
indexing_techniques/multi_vector_indexing/.ragatouille/colbert/indexes/Miyazaki-123/: 0.codes.pt  avg_residual.pt  centroids.pt  doclens.0.json  metadata.json  pid_docid_map.json  plan.json
indexing_techniques/parent_document_indexing/: parent_document_indexing.py  pyproject.toml
post_processing/contextual_compression/: contextual_compression.py  pyproject.toml  readme.md  vanilla_vectorstore_retrieval.py
post_processing/reranking_documents/: pyproject.toml  readme.md  reranking_documents.py
query_construction/self_query/: create_vector_store.py  pyproject.toml  readme.md  self_query.py
query_construction/text_to_cypher/: create_graph_db.py  pyproject.toml  text_to_cypher_agentic.py  text_to_cypher_agentless.py
query_construction/text_to_sql/: get_db_engine.py  pyproject.toml  text_to_sql_agentic.py  text_to_sql_vanilla.py
query_routing/logical_routing/: logical_routing.py  pyproject.toml
query_routing/semantic_routing/: pyproject.toml  semantic_routing.py
query_translation/RAG-multi-query-retrieval/: main.py  multi_query_retrieval.py  pyproject.toml
query_translation/RAG_HyDE/: RAG_HyDE.py  main.py
query_translation/RAG_query_decomposition/: RAG_query_decomposition.py
query_translation/RAG_step_back_prompting/: RAG_step_back_prompting.py  main.py
reflection-agent/: chains.py  main.py
reflexion-agent/: chains.py  main.py  pyproject.toml  schemas.py  tool_executor.py
test/: pyproject.toml  test.py
