[tool.poetry]
name = "rag-fusion"
version = "0.1.0"
description = ""
authors = ["Anant"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.14"
langchain-openai = "^0.1.22"
langchain-core = "^0.2.35"
langchain-community = "^0.2.12"
bs4 = "^0.0.2"
langchain-chroma = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
