[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Anant"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.14"
langchain-core = "^0.2.34"
langchain-openai = "^0.1.22"
pypdf = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
