[tool.poetry]
name = "corrective rag"
version = "0.1.0"
description = ""
authors = ["Anantvir"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.19"
beautifulsoup4 = "^4.12.3"
langchain = "^0.2.16"
langchainhub = "^0.1.21"
langchain-community = "^0.2.16"
tavily-python = "^0.4.0"
chroma = "^0.2.0"
python-dotenv = "^1.0.1"
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
