[tool.poetry]
name = "text-to-cypher"
version = "0.1.0"
description = ""
authors = ["Anantvir Singh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.15"
langgraph = "^0.2.14"
langchain-openai = "^0.1.23"
langchain-community = "^0.2.14"
neo4j = "^5.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
