[tool.poetry]
name = "text-to-sql"
version = "0.1.0"
description = ""
authors = ["Anantvir Singh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.15"
langchain-openai = "^0.1.23"
langchain-community = "^0.2.14"
faiss-cpu = "^1.8.0.post1"
langgraph = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
