[tool.poetry]
name = "logical-routing"
version = "0.1.0"
description = ""
authors = ["Anantvir"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.14"
langchain-core = "^0.2.35"
langchain-community = "^0.2.12"
langchain-openai = "^0.1.22"
langchain-anthropic = "^0.1.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
